Testing image URL update

--- a/rustic-app/src/app/components/menu/menu.component.html
+++ b/rustic-app/src/app/components/menu/menu.component.html
@@ -12,7 +12,7 @@
     </nav>
     <br>
     <div id="menu-breakfast" class="click-hide">
-        <img src="../../../assets/menu-breakfast-1.png" alt="fruit plate">
+        <img src="assets/menu-breakfast-1.png" alt="fruit plate">
         <img src="../../../assets/menu-breakfast-2.png" alt="fruit & chai seed parfait">
         <img src="../../../assets/menu-breakfast-5.png" alt="pancakes with berries">
         <img src="../../../assets/menu-breakfast-6.png" alt="family-style breakfast spread">
