Updated routing to test default route page, updated location CSS and asset URLs, updated menu URLs

--- a/rustic-app/src/app/components/location/location.component.html
+++ b/rustic-app/src/app/components/location/location.component.html
@@ -2,7 +2,7 @@
     <h4>Book Table</h4>
     <h2>Opening Hours</h2>
     <div>
-        <img src="../../../assets/phone_icon.png" alt="phone icon">
+        <img src="assets/phone_icon.png" alt="phone icon">
         <br>
         <span>Call Now</span>
         <br><br>
@@ -27,8 +27,8 @@
     </section>
 
     <ul class="flex-inline">
-        <li><a href="#"><img src="../../../assets/facebook_icon.png" alt="fb icon"></a></li>
-        <li><a href="#"><img src="../../../assets/twitter_icon.png" alt="twitter icon"></a></li>
-        <li><a href="#"><img src="../../../assets/instagram logo_icon.png" alt="instagram icon"></a></li>
+        <li><a href="#"><img src="assets/facebook_icon.png" alt="fb icon"></a></li>
+        <li><a href="#"><img src="assets/twitter_icon.png" alt="twitter icon"></a></li>
+        <li><a href="#"><img src="assets/instagram logo_icon.png" alt="instagram icon"></a></li>
     </ul>
 </section>
