--- a/rustic-app/src/app/components/menu/menu.component.html
+++ b/rustic-app/src/app/components/menu/menu.component.html
@@ -13,34 +13,34 @@
     <br>
     <div id="menu-breakfast" class="click-hide">
         <img src="assets/menu-breakfast-1.png" alt="fruit plate">
-        <img src="../../../assets/menu-breakfast-2.png" alt="fruit & chai seed parfait">
-        <img src="../../../assets/menu-breakfast-5.png" alt="pancakes with berries">
-        <img src="../../../assets/menu-breakfast-6.png" alt="family-style breakfast spread">
+        <img src="assets/menu-breakfast-2.png" alt="fruit & chai seed parfait">
+        <img src="assets/menu-breakfast-5.png" alt="pancakes with berries">
+        <img src="assets/menu-breakfast-6.png" alt="family-style breakfast spread">
     </div>
 
     <div id="menu-lunch" class="click-hide">
-        <img src="../../../assets/menu-lunch-1.png" alt="autumn vegetable plate">
-        <img src="../../../assets/menu-lunch-2.png" alt="avocado toast with goat cheese">
-        <img src="../../../assets/menu-lunch-3.png" alt="pizza pie">
-        <img src="../../../assets/menu-lunch-4.png" alt="bowtie pasta dish">
+        <img src="assets/menu-lunch-1.png" alt="autumn vegetable plate">
+        <img src="assets/menu-lunch-2.png" alt="avocado toast with goat cheese">
+        <img src="assets/menu-lunch-3.png" alt="pizza pie">
+        <img src="assets/menu-lunch-4.png" alt="bowtie pasta dish">
     </div>
 
     <div id="menu-dinner" class="click-hide">
-        <img src="../../../assets/menu-dinner-2.png" alt="fish filet">
-        <img src="../../../assets/menu-dinner-3.png" alt="pork chop board">
-        <img src="../../../assets/menu-dinner-1.png" alt="family-style dinner">
-        <img src="../../../assets/menu-dinner-4.png" alt="steak with mushrooms">
+        <img src="assets/menu-dinner-2.png" alt="fish filet">
+        <img src="assets/menu-dinner-3.png" alt="pork chop board">
+        <img src="assets/menu-dinner-1.png" alt="family-style dinner">
+        <img src="assets/menu-dinner-4.png" alt="steak with mushrooms">
     </div>
 
     <div id="menu-sides" class="click-hide">
-        <img src="../../../assets/menu-sides-2.png" alt="Mediterranean plate">
-        <img src="../../../assets/menu-sides-5.png" alt="curry bowl">
-        <img src="../../../assets/menu-veggie_sides.png" alt="Smorgasburg">
-        <img src="../../../assets/menu-sides-4.png" alt="kabobs">
+        <img src="assets/menu-sides-2.png" alt="Mediterranean plate">
+        <img src="assets/menu-sides-5.png" alt="curry bowl">
+        <img src="assets/menu-veggie_sides.png" alt="Smorgasburg">
+        <img src="assets/menu-sides-4.png" alt="kabobs">
     </div>
 
     <div id="menu-drinks" class="click-hide">
-        <img src="../../../assets/menu-drinks-1.png" alt="">
-        <img src="../../../assets/menu-drinks-2.png" alt="">
+        <img src="assets/menu-drinks-1.png" alt="">
+        <img src="assets/menu-drinks-2.png" alt="">
     </div>
 </section>
