Fix broken image on nav component

--- a/rustic-app/src/app/components/nav/nav.component.html
+++ b/rustic-app/src/app/components/nav/nav.component.html
@@ -10,7 +10,7 @@
                 <li><a routerLink="menu" onclick="closeNav()">Menu</a></li>
                 <li><a routerLink="location" onclick="closeNav()">Location</a></li>
             </ul>
-            <div class="flex center hide"><img src="../../../assets/menu-icon.png" alt="menu icon" id="menu-icon" onclick="openNav()"></div>
+            <div class="flex center hide"><img src="assets/menu-icon.png" alt="menu icon" id="menu-icon" onclick="openNav()"></div>
         </nav>
     </header>
 </main>
