Highlight which nav route is active

--- a/rustic-app/src/app/components/nav/nav.component.html
+++ b/rustic-app/src/app/components/nav/nav.component.html
@@ -5,10 +5,10 @@
             <ul class="flex sidenav" id="mySidenav">
                 <!-- <li id="logo">Rustic</li> -->
                 <li class="hide"><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a></li>
-                <li><a routerLink="welcome" onclick="closeNav()">Home</a></li>
-                <li><a routerLink="about" onclick="closeNav()">About Us</a></li>
-                <li><a routerLink="menu" onclick="closeNav()">Menu</a></li>
-                <li><a routerLink="location" onclick="closeNav()">Location</a></li>
+                <li><a routerLink="welcome" routerLinkActive="active" onclick="closeNav()">Home</a></li>
+                <li><a routerLink="about" routerLinkActive="active" onclick="closeNav()">About Us</a></li>
+                <li><a routerLink="menu" routerLinkActive="active" onclick="closeNav()">Menu</a></li>
+                <li><a routerLink="location" routerLinkActive="active" onclick="closeNav()">Location</a></li>
             </ul>
             <div class="flex center hide"><img src="assets/menu-icon.png" alt="menu icon" id="menu-icon" onclick="openNav()"></div>
         </nav>
